--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,7 @@ label {
 
 .main-page {
   background-color: gray;
+  padding-top: 6.25rem;
 }
 
 .separator {
@@ -420,16 +421,11 @@ label {
 
 .hero-block__image {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 37.5rem;
-          flex: 0 0 37.5rem;
-  height: 43.75rem;
-  overflow: hidden;
+      -ms-flex: 0 1 37.5rem;
+          flex: 0 1 37.5rem;
 }
 .hero-block__image img {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  max-width: 100%;
 }
 @media (max-width: 61.99875em) {
   .hero-block__image {
@@ -438,7 +434,9 @@ label {
             flex: 0 1 auto;
     width: 100%;
     max-width: 31.25rem;
-    height: 31.25rem;
+  }
+  .hero-block__image img {
+    height: auto;
   }
 }
 
